# ollama-browser-use

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pull_request_template.md  pyenv.md  pyproject.toml  ssh_setup.md
ollama_browser_use/: _version.py  main.py
